# nxgpucatch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CompileGLSL.cmake  Finddeko3d.cmake
src/: alignment.h  bit_cast.h  cmd_util.h  compare.h  descriptor_set.h  device.cpp  device.h  eval_util.h  formats.h  fp16_run.h  heap.h  main.cpp  resource.cpp  resource.h  shader.cpp  shader.h  wait_input.cpp  wait_input.h  xor_random.h
src/tests/: buffer.cpp  clear.cpp  f2i.cpp  fadd.cpp  float_arithmetic.cpp  float_conversion.cpp  indirect_compute.cpp  isetp.cpp  p2r.cpp  render_formats.cpp  render_linear_aliased.cpp  texture_buffer.cpp  write_uniform.vert
src/tests/draw/: depth_range.cpp  flat_frag_coord_32.frag  frag_coord.cpp  full_screen_triangle.vert  full_screen_triangle_depth.vert  shaders.cpp  shaders.h  simple_draw.cpp  varying_color.frag  varying_undefined.cpp  white.frag
src/tests/shader/: atom.cpp  atoms.cpp  bfe.cpp  bfi.cpp  cal.cpp  cset.cpp  csetp.cpp  dadd.cpp  dfma.cpp  dmnmx.cpp  dmul.cpp  dset.cpp  dsetp.cpp  f2f.cpp  f2i.cpp  fadd.cpp  fcmp.cpp  ffma.cpp  flo.cpp  flow.cpp  fmnmx.cpp  fmul.cpp  fset.cpp  fsetp.cpp  hadd2.cpp  hfma2.cpp  hmul2.cpp  hset2.cpp  hsetp2.cpp  i2f.cpp  i2i.cpp  iadd.cpp  iadd3.cpp  icmp.cpp  imnmx.cpp  iscadd.cpp  iset.cpp  isetp.cpp  ldc.cpp  ldg.cpp  (+31 more)
